fixed the issue of dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,8 @@
 
       --radius: 0.5rem;
 
-      --background: 0 0 0; 
-      --foreground: 255 255 255;
+      --background: 222.2 84% 4.9%;
+      --foreground: 210 40% 98%;
 
       --card: 222.2 84% 4.9%;
       --card-foreground: 210 40% 98%;
